k3s/doc/templates/service-template/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE
  labels:
    name: NAMESPACE
    environment: production
